deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
      - name: notes-app-container
        image: asia-southeast1-docker.pkg.dev/jarkom-adrian/tk-kowan/tk-kowan:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
        command: ["sh", "-c"]
        args:
          - |
            python manage.py migrate
            gunicorn --bind 0.0.0.0:8000 notes_backend.wsgi:application

---

apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
spec:
  selector:
    app: notes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
